# studioMCP

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_PLAN.md  Makefile  README.md  STUDIOMCP_DEVELOPMENT_PLAN.md  cabal.project  docker-compose.yaml  skaffold.yaml  studioMCP.cabal
.studiomcp-data/: audit.json  governance.json
DEVELOPMENT_PLAN/: 00-overview.md  README.md  development_plan_standards.md  legacy-tracking-for-deletion.md  phase-1-repository-dag-runtime-foundations.md  phase-10-build-artifact-isolation.md  phase-11-runtime-readiness-and-condition-driven-startup.md  phase-12-aggregate-test-artifact-isolation-and-warning-closure.md  phase-13-harbor-push-reliability-and-mcp-http-closure.md  phase-14-makefile-removal.md  phase-15-monocontainer-tool-expansion.md  phase-16-minio-model-storage.md  phase-17-haskell-tool-adapters.md  phase-18-minio-fixture-seeding.md  phase-19-individual-tool-tests.md  phase-2-mcp-surface-catalog-artifact-governance.md  phase-20-dag-chain-integration-tests.md  phase-21-chaos-engineering.md  phase-22-ses-email-integration.md  phase-23-tool-documentation.md  phase-24-whisper-runtime-closure.md  phase-25-auth-storage-and-runtime-contract-realignment.md  phase-3-keycloak-auth-shared-sessions.md  phase-4-control-plane-data-plane-contract.md  phase-5-browser-session-contract.md  phase-6-cluster-control-plane-parity.md  phase-7-keycloak-realm-bootstrap.md  phase-8-final-closure-regression-gate.md  phase-9-cli-test-validate-consolidation.md  system-components.md
app/: BFFMain.hs  BFFMode.hs  InferenceMain.hs  Main.hs  ServerMain.hs  WorkerMain.hs
chart/: Chart.yaml  values-kind.yaml  values-prod.yaml  values-saas.yaml  values.yaml
chart/iam/: ses-policy.json
chart/templates/: _helpers.tpl  bff.yaml  ingress.yaml  llm_reference.yaml  minio.yaml  minio_init_job.yaml  minio_pvc.yaml  pulsar.yaml  pulsar_pvc.yaml  secrets.yaml  studiomcp_deployment.yaml  studiomcp_rbac.yaml  worker.yaml
docker/: Dockerfile  docker-compose.yaml
docker/entrypoints/: start-dev-shell.sh  start-inference.sh  start-server.sh  start-worker.sh
docker/reference-model/: mock_server.py
docker/scripts/: bootstrap-minio.sh  seed-example-assets.sh  wait-for-minio.sh  wait-for-pulsar.sh
docker/tool-shims/: basic_pitch.py  demucs.py
documents/: README.md  documentation_standards.md
documents/adr/: 0001_mcp_transport.md  0002_parallel_scheduling.md
documents/architecture/: artifact_storage_architecture.md  bff_architecture.md  cli_architecture.md  inference_mode.md  mcp_protocol_architecture.md  multi_tenant_saas_mcp_auth_architecture.md  overview.md  parallel_scheduling.md  pulsar_vs_minio.md  server_mode.md
documents/development/: chaos_testing.md  local_dev.md  test_fixtures.md  testing_strategy.md
documents/domain/: dag_specification.md
documents/engineering/: docker_policy.md  email_templates.md  k8s_native_dev_policy.md  k8s_storage.md  local_dev.md  model_storage.md  security_model.md  session_scaling.md  testing.md  timeout_policy.md
documents/operations/: keycloak_realm_bootstrap_runbook.md  runbook_local_debugging.md  ses_email.md
documents/reference/: cli_reference.md  cli_surface.md  mcp_surface.md  mcp_tool_catalog.md  web_portal_surface.md
documents/research/: README.md  open_weight_models_survey.md  pure_job_workflow.md
documents/tools/: basicpitch.md  demucs.md  ffmpeg.md  fluidsynth.md  imagemagick.md  keycloak.md  mediainfo.md  minio.md  postgres.md  pulsar.md  redis.md  rubberband.md  sox.md  whisper.md
examples/assets/: README.md
examples/dags/: audio-stem-analysis.yaml  multi-stage-video-pipeline.yaml  music-transcription.yaml  pitch-transposition.yaml  podcast-production.yaml  stem-remix.yaml  subtitle-generation.yaml  thumbnail-pipeline.yaml  timeout-failure-demo.yaml  transcode-basic.yaml  transcode-missing-input.yaml  video-localization.yaml
examples/fixtures/: manifest.yaml
kind/: kind_config.yaml
scripts/: dev.sh  format.sh  helm_template.sh  integration-harness.sh  k8s_dev.sh  kind_create_cluster.sh  kind_delete_cluster.sh  lint.sh  run-example-dag.sh  smoke-test.sh  test-integration.sh  test.sh
src/StudioMCP/: Prelude.hs
templates/email/: email-verification.html  email-verification.txt  password-changed.html  password-changed.txt  password-reset.html  password-reset.txt
test/: FixturesSpec.hs  IntegrationSpec.hs  Spec.hs
test/API/: HealthSpec.hs  MetricsSpec.hs  ReadinessSpec.hs  VersionSpec.hs
test/Auth/: ClaimsSpec.hs  ConfigSpec.hs  JwksSpec.hs  MiddlewareSpec.hs  PassthroughGuardSpec.hs  ScopesSpec.hs  TypesSpec.hs
test/CLI/: CommandSpec.hs  DagSpec.hs  DocsSpec.hs
test/Config/: EnvSpec.hs  LoadSpec.hs  TypesSpec.hs
test/DAG/: ExecutorSpec.hs  HashingSpec.hs  MemoizationSpec.hs  ParserSpec.hs  ProvenanceSpec.hs  RailwaySpec.hs  SchedulerSpec.hs  SummarySpec.hs  TimeoutSpec.hs  TypesSpec.hs  ValidatorSpec.hs
test/Email/: TemplatesSpec.hs
test/Inference/: GuardrailsSpec.hs  HostSpec.hs  PromptsSpec.hs  ReferenceModelSpec.hs  TypesSpec.hs
test/Integration/: ChaosSpec.hs  DAGChainsSpec.hs  EmailFlowsSpec.hs  HarnessSpec.hs
test/MCP/: ConformanceSpec.hs  ContextSpec.hs  CoreSpec.hs  HandlersSpec.hs  JsonRpcSpec.hs  PromptsSpec.hs  ProtocolSpec.hs  ResourcesSpec.hs  ServerSpec.hs  StateMachineSpec.hs  ToolsSpec.hs  TransportSpec.hs  TypesSpec.hs
test/Messaging/: EventsSpec.hs  ExecutionStateSpec.hs  PulsarSpec.hs  TopicsSpec.hs
test/Models/: LoaderSpec.hs  RegistrySpec.hs
test/Observability/: CorrelationIdSpec.hs  McpMetricsSpec.hs  QuotasSpec.hs  RateLimitingSpec.hs  RedactionSpec.hs
test/Result/: FailureSpec.hs  SummaryFailureSpec.hs  TypesSpec.hs
test/Session/: RedisConfigSpec.hs  RedisStoreSpec.hs  StoreSpec.hs
test/Storage/: AuditTrailSpec.hs  ContentAddressedSpec.hs  GovernanceSpec.hs  KeysSpec.hs  ManifestsSpec.hs  MinIOSpec.hs  TenantStorageSpec.hs  VersioningSpec.hs
test/TestSupport/: DagGenerators.hs  InMemorySessionStore.hs
test/Tools/: AdaptersSpec.hs  BoundarySpec.hs  FFmpegSpec.hs  RegistrySpec.hs  TypesSpec.hs
test/Util/: ExceptionsSpec.hs  (+4 more)
(+120 files in other folders)
