cabal-version:      3.0
name:               studioMCP
version:            0.1.0.0
synopsis:           Haskell-first MCP server for pure DAG-based studio workflows
category:           Development
build-type:         Simple
license:            MIT
author:             Matthew Nowak
maintainer:         matthewnowak@example.com

common common-settings
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-export-lists
    -Wredundant-constraints

library
  import: common-settings
  hs-source-dirs: src
  exposed-modules:
    StudioMCP.Prelude
    StudioMCP.Config.Types
    StudioMCP.Config.Load
    StudioMCP.Config.Env
    StudioMCP.CLI.Command
    StudioMCP.CLI.Cluster
    StudioMCP.CLI.Dag
    StudioMCP.CLI.Docs
    StudioMCP.MCP.Server
    StudioMCP.MCP.Protocol
    StudioMCP.MCP.Handlers
    StudioMCP.MCP.Types
    StudioMCP.MCP.JsonRpc
    StudioMCP.MCP.Core
    StudioMCP.MCP.Context
    StudioMCP.MCP.Protocol.Types
    StudioMCP.MCP.Protocol.StateMachine
    StudioMCP.MCP.Transport.Types
    StudioMCP.MCP.Transport.Stdio
    StudioMCP.MCP.Transport.Http
    StudioMCP.MCP.Session.Types
    StudioMCP.MCP.Session.Store
    StudioMCP.MCP.Session.RedisConfig
    StudioMCP.MCP.Session.RedisStore
    StudioMCP.MCP.Tools
    StudioMCP.MCP.Resources
    StudioMCP.MCP.Prompts
    StudioMCP.DAG.Types
    StudioMCP.DAG.Parser
    StudioMCP.DAG.Validator
    StudioMCP.DAG.Executor
    StudioMCP.DAG.Scheduler
    StudioMCP.DAG.Runtime
    StudioMCP.DAG.Timeout
    StudioMCP.DAG.Railway
    StudioMCP.DAG.Memoization
    StudioMCP.DAG.Summary
    StudioMCP.DAG.Hashing
    StudioMCP.DAG.Provenance
    StudioMCP.Result.Types
    StudioMCP.Result.Failure
    StudioMCP.Result.SummaryFailure
    StudioMCP.Storage.MinIO
    StudioMCP.Storage.Keys
    StudioMCP.Storage.Manifests
    StudioMCP.Storage.ContentAddressed
    StudioMCP.Storage.TenantStorage
    StudioMCP.Storage.Governance
    StudioMCP.Storage.Versioning
    StudioMCP.Storage.AuditTrail
    StudioMCP.Messaging.Pulsar
    StudioMCP.Messaging.Topics
    StudioMCP.Messaging.Events
    StudioMCP.Messaging.ExecutionState
    StudioMCP.Tools.Types
    StudioMCP.Tools.Registry
    StudioMCP.Tools.Boundary
    StudioMCP.Tools.FFmpeg
    StudioMCP.Inference.Types
    StudioMCP.Inference.Host
    StudioMCP.Inference.Prompts
    StudioMCP.Inference.ReferenceModel
    StudioMCP.Inference.Guardrails
    StudioMCP.Worker.Protocol
    StudioMCP.Worker.Server
    StudioMCP.API.Health
    StudioMCP.API.Metrics
    StudioMCP.API.Version
    StudioMCP.Util.Time
    StudioMCP.Util.Logging
    StudioMCP.Util.Json
    StudioMCP.Util.Exceptions
    StudioMCP.Util.Startup
    StudioMCP.Observability.CorrelationId
    StudioMCP.Observability.Quotas
    StudioMCP.Observability.RateLimiting
    StudioMCP.Observability.McpMetrics
    StudioMCP.Observability.Redaction
    StudioMCP.Auth.Types
    StudioMCP.Auth.Config
    StudioMCP.Auth.Jwks
    StudioMCP.Auth.Claims
    StudioMCP.Auth.Middleware
    StudioMCP.Auth.Scopes
    StudioMCP.Web.Types
    StudioMCP.Web.BFF
    StudioMCP.Web.Handlers
  build-depends:
      aeson >=2.2 && <2.3
    , async >=2.2 && <2.3
    , base >=4.21 && <4.23
    , base64-bytestring >=1.2 && <1.3
    , bytestring >=0.12 && <0.13
    , case-insensitive >=1.2 && <1.3
    , containers >=0.7 && <0.8
    , cryptonite >=0.30 && <0.31
    , directory >=1.3 && <1.4
    , filepath >=1.5 && <1.6
    , hedis >=0.15 && <0.16
    , http-client >=0.7 && <0.8
    , http-types >=0.12 && <0.13
    , memory >=0.18 && <0.19
    , process >=1.6 && <1.7
    , stm >=2.5 && <2.6
    , text >=2.1 && <2.2
    , time >=1.14 && <1.15
    , uuid >=1.3 && <1.4
    , unix >=2.8 && <2.9
    , vector >=0.13 && <0.14
    , wai >=3.2 && <3.3
    , warp >=3.4 && <3.5
    , yaml >=0.11 && <0.12

executable studiomcp
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
      BFFMode
  ghc-options:
      -threaded
      -rtsopts
  build-depends:
      base
    , filepath
    , http-client
    , studioMCP
    , text
    , warp

executable studiomcp-server
  import: common-settings
  hs-source-dirs: app
  main-is: ServerMain.hs
  ghc-options:
      -threaded
      -rtsopts
  build-depends:
      base
    , studioMCP

executable studiomcp-inference
  import: common-settings
  hs-source-dirs: app
  main-is: InferenceMain.hs
  ghc-options:
      -threaded
      -rtsopts
  build-depends:
      base
    , studioMCP

executable studiomcp-worker
  import: common-settings
  hs-source-dirs: app
  main-is: WorkerMain.hs
  ghc-options:
      -threaded
      -rtsopts
  build-depends:
      base
    , studioMCP

executable studiomcp-bff
  import: common-settings
  hs-source-dirs: app
  main-is: BFFMain.hs
  other-modules:
      BFFMode
  ghc-options:
      -threaded
      -rtsopts
  build-depends:
      base
    , http-client
    , studioMCP
    , text
    , warp

test-suite unit-tests
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    API.HealthSpec
    API.MetricsSpec
    DAG.ValidatorSpec
    DAG.ParserSpec
    DAG.RailwaySpec
    DAG.TimeoutSpec
    DAG.MemoizationSpec
    DAG.SchedulerSpec
    DAG.ExecutorSpec
    DAG.SummarySpec
    Inference.GuardrailsSpec
    Inference.PromptsSpec
    MCP.JsonRpcSpec
    MCP.ProtocolSpec
    MCP.StateMachineSpec
    MCP.CoreSpec
    MCP.ConformanceSpec
    DAG.ProvenanceSpec
    Messaging.ExecutionStateSpec
    Messaging.EventsSpec
    Messaging.PulsarSpec
    Messaging.TopicsSpec
    Storage.ContentAddressedSpec
    Storage.KeysSpec
    Storage.ManifestsSpec
    Storage.MinIOSpec
    Storage.GovernanceSpec
    Storage.AuditTrailSpec
    Storage.TenantStorageSpec
    Tools.BoundarySpec
    Worker.ProtocolSpec
    CLI.CommandSpec
    CLI.DocsSpec
    Auth.TypesSpec
    Auth.ConfigSpec
    Auth.ClaimsSpec
    Auth.ScopesSpec
    Auth.JwksSpec
    Auth.MiddlewareSpec
    Session.StoreSpec
    Session.RedisConfigSpec
    Session.RedisStoreSpec
    Web.TypesSpec
    Web.BFFSpec
    Web.HandlersSpec
    API.VersionSpec
    CLI.DagSpec
    Config.EnvSpec
    Config.LoadSpec
    Config.TypesSpec
    DAG.HashingSpec
    DAG.TypesSpec
    Inference.HostSpec
    Inference.ReferenceModelSpec
    Inference.TypesSpec
    MCP.ContextSpec
    MCP.HandlersSpec
    MCP.PromptsSpec
    MCP.ResourcesSpec
    MCP.ServerSpec
    MCP.ToolsSpec
    MCP.TransportSpec
    MCP.TypesSpec
    Observability.CorrelationIdSpec
    Observability.McpMetricsSpec
    Observability.QuotasSpec
    Observability.RateLimitingSpec
    Observability.RedactionSpec
    Result.FailureSpec
    Result.SummaryFailureSpec
    Result.TypesSpec
    Storage.VersioningSpec
    Tools.FFmpegSpec
    Tools.RegistrySpec
    Tools.TypesSpec
    Util.ExceptionsSpec
    Util.StartupSpec
    Util.JsonSpec
    Util.LoggingSpec
    Util.TimeSpec
    Worker.ServerSpec
  build-depends:
      aeson
    , base
    , bytestring
    , case-insensitive
    , containers
    , directory
    , hspec >=2.11 && <2.12
    , http-client
    , http-types
    , process
    , studioMCP
    , text
    , time
    , vector
    , wai
    , warp

test-suite integration-tests
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: IntegrationSpec.hs
  other-modules:
    Integration.HarnessSpec
  build-depends:
      base
    , hspec >=2.11 && <2.12
    , process
    , studioMCP
